syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalInput {
    int32 input1 = 1;
    int32 input2 = 2;
}

message CalRequest {
    CalInput calInput = 1;
}

message CalResponse {
    int32 result = 1;
}

service CalService {
    rpc calculate(CalRequest) returns (CalResponse) {};
}
